# roc-iced

./: .gitignore  Makefile  README.md
.cargo/: config.toml
.github/workflows/: build.yaml
examples/: basic.roc
glue/: alignment.roc
platform/: Action.roc  Alignment.roc  Border.roc  Cargo.toml  Color.roc  Effect.roc  Element.roc  Io.roc  Length.roc  Option.roc  Padding.roc  PlatformElement.roc  Settings.roc  Size.roc  Task.roc  app.roc  main-glue.roc  main.roc
platform/Element/: Button.roc  Column.roc  Container.roc  Row.roc
platform/src/: glue.rs  lib.rs  runtime.rs
